libtvg/tvg.h

/* Note: In contrast to bson_oid_t, we internally swap the byte order, such
 * that comparison works the same for integers and MongoDB identifiers. */

struct objectid
{
    uint64_t    lo;
    uint32_t    hi;
    uint32_t    type;
};
struct bucket1
{
    uint64_t    num_entries;
    uint64_t    max_entries;
    struct entry1 *entries;
    uint64_t    hint;
};
struct vector_ops;
struct vector
{
    uint64_t    refcount;
    uint32_t    flags;
    uint64_t    revision;
    float       eps;

    /* private: */
    struct query *query;

    const struct vector_ops *ops;
    uint32_t    bits;
    struct bucket1 *buckets;
    uint64_t    optimize;
};
struct bucket2
{
    uint64_t    num_entries;
    uint64_t    max_entries;
    struct entry2 *entries;
    uint64_t    hint;
};
struct graph_ops;
struct graph
{
    uint64_t    refcount;
    uint32_t    flags;
    uint64_t    revision;
    float       eps;
    uint64_t    ts;
    struct objectid objectid;

    /* private: */
    struct query *query;

    struct tvg *tvg;         /* NULL for disconnected graphs */
    struct avl_entry entry;

    uint64_t    cache;       /* 0 if not cached, otherwise size of graph */
    struct list cache_entry;

    const struct graph_ops *ops;
    uint32_t    bits_source; /* 0...31 */
    uint32_t    bits_target; /* 0...31 */
    struct bucket2 *buckets;
    uint64_t    optimize;
};
struct node
{
    uint64_t    refcount;
    uint64_t    index;

    /* private: */
    struct tvg *tvg;         /* NULL for disconnected nodes */
    struct avl_entry entry_ind;
    struct avl_entry entry_key;
    struct list attributes;
};
struct tvg
{
    uint64_t    refcount;
    uint32_t    flags;
    int         verbosity;

    /* private: */
    struct avl_tree graphs;
    struct list queries;
    struct mongodb *mongodb;
    uint64_t    batch_size;

    struct avl_tree nodes_ind;  /* node by index */
    struct avl_tree nodes_key;  /* node by primary key */
    struct list primary_key;
    uint64_t    next_node;

    struct list graph_cache;
    uint64_t    graph_cache_used;
    uint64_t    graph_cache_size;

    struct list query_cache;
    uint64_t    query_cache_used;
    uint64_t    query_cache_size;
};
struct query
{
    /* private: */
    struct tvg *tvg;
    struct list entry;

    uint64_t    cache;       /* 0 if not cached, otherwise size of graph */
    struct list cache_entry;

    struct list todo_entry;

    const struct query_ops *ops;
    uint64_t    ts_min;
    uint64_t    ts_max;
};
struct mongodb_config
{
    char       *uri;
    char       *database;

    char       *col_articles;
    char       *article_id;     /* document id */
    char       *article_time;   /* time stamp */

    char       *filter_key;     /* article filter key */
    char       *filter_value;   /* article filter value */

    char       *col_entities;
    char       *entity_doc;     /* document id */
    char       *entity_sen;     /* sentence id */
    char       *entity_ent;     /* entity id */

    int         use_pool;       /* use connection pool */
    int         load_nodes;
    int         sum_weights;
    int         norm_weights;

    uint64_t    max_distance;
};
struct mongodb
{
    uint64_t    refcount;

    /* private: */
    struct mongodb_config *config;
    void       *client;     /* mongoc_client_t */
    void       *pool;       /* mongoc_client_pool_t */
};
struct vector *graph_get_all_distances_count(struct graph *graph, uint64_t source, uint64_t max_count);
struct vector *graph_get_all_distances_weight(struct graph *graph, uint64_t source, double max_weight);
struct graph *graph_get_all_distances_graph(struct graph *graph, int use_weights);
/* Node functions */

struct node *alloc_node(void);
void free_node(struct node *node);
void unlink_node(struct node *node);
int node_set_attribute(struct node *node, const char *key, const char *value);
const char *node_get_attribute(struct node *node, const char *key);
char **node_get_attributes(struct node *node);
/* TVG functions */

struct tvg *alloc_tvg(uint32_t flags);
void free_tvg(struct tvg *tvg);
void tvg_set_verbosity(struct tvg *tvg, int verbosity);
uint64_t tvg_memory_usage(struct tvg *tvg);
int tvg_link_graph(struct tvg *tvg, struct graph *graph, uint64_t ts);
int tvg_set_primary_key(struct tvg *tvg, const char *key);
int tvg_link_node(struct tvg *tvg, struct node *node, struct node **ret_node, uint64_t index);
struct node *tvg_get_node_by_index(struct tvg *tvg, uint64_t index);
struct node *tvg_get_node_by_primary_key(struct tvg *tvg, struct node *primary_key);
int tvg_load_graphs_from_file(struct tvg *tvg, const char *filename);
int tvg_load_nodes_from_file(struct tvg *tvg, const char *filename, const char *key);
int tvg_enable_mongodb_sync(struct tvg *tvg, struct mongodb *mongodb,
                            uint64_t batch_size, uint64_t cache_size);
void tvg_disable_mongodb_sync(struct tvg *tvg);
int tvg_enable_query_cache(struct tvg *tvg, uint64_t cache_size);
void tvg_disable_query_cache(struct tvg *tvg);
void tvg_invalidate_queries(struct tvg *tvg, uint64_t ts_min, uint64_t ts_max);
struct graph *tvg_lookup_graph_ge(struct tvg *tvg, uint64_t ts);
struct graph *tvg_lookup_graph_le(struct tvg *tvg, uint64_t ts);
struct graph *tvg_lookup_graph_near(struct tvg *tvg, uint64_t ts);
int tvg_compress(struct tvg *tvg, uint64_t step, uint64_t offset);
struct graph *tvg_extract(struct tvg *tvg, uint64_t ts, float (*weight_func)(struct graph *,
                          uint64_t, void *), void *userdata);
/* Query functions */

struct graph *tvg_sum_edges(struct tvg *tvg, uint64_t ts_min, uint64_t ts_max, float eps);
struct graph *tvg_sum_edges_exp(struct tvg *tvg, uint64_t ts_min, uint64_t ts_max,
                                       float weight, float log_beta, float eps);
struct graph *tvg_count_edges(struct tvg *tvg, uint64_t ts_min, uint64_t ts_max);
struct vector *tvg_count_nodes(struct tvg *tvg, uint64_t ts_min, uint64_t ts_max);
uint64_t tvg_count_graphs(struct tvg *tvg, uint64_t ts_min, uint64_t ts_max);
struct graph *tvg_topics(struct tvg *tvg, uint64_t ts_min, uint64_t ts_max, uint64_t step, uint64_t offset);
/* Metric functions */

struct graph *metric_graph_avg(struct graph **graphs, uint64_t num_graphs);
struct vector *metric_vector_avg(struct vector **vectors, uint64_t num_vectors);
struct graph *metric_graph_std(struct graph **graphs, uint64_t num_graphs);
struct vector *metric_vector_std(struct vector **vectors, uint64_t num_vectors);
struct graph *metric_graph_pareto(struct graph *graph1, struct graph *graph2,
                                  int maximize1, int maximize2, float base);
struct vector *metric_vector_pareto(struct vector *vector1, struct vector *vector2,
                                    int maximize1, int maximize2, float base);
/* MongoDB functions */

struct mongodb *alloc_mongodb(const struct mongodb_config *config);
void free_mongodb(struct mongodb *mongodb);
struct graph *mongodb_load_graph(struct tvg *tvg, struct mongodb *mongodb, struct objectid *objectid, uint32_t flags);
int tvg_load_graphs_from_mongodb(struct tvg *tvg, struct mongodb *mongodb);