libtvg/pytvg.py


lib.graph_get_all_distances_count.argtypes = (c_graph_p, c_uint64, c_uint64)
lib.graph_get_all_distances_count.restype = c_vector_p

lib.graph_get_all_distances_weight.argtypes = (c_graph_p, c_uint64, c_double)
lib.graph_get_all_distances_weight.restype = c_vector_p

lib.graph_get_all_distances_graph.argtypes = (c_graph_p, c_int)
lib.graph_get_all_distances_graph.restype = c_graph_p

lib.graph_get_connected_components.argtypes = (c_graph_p,)
lib.graph_get_connected_components.restype = c_vector_p

# Node functions

lib.alloc_node.argtypes = ()
lib.alloc_node.restype = c_node_p

lib.free_node.argtypes = (c_node_p,)
lib.free_node.restype = None

lib.unlink_node.argtypes = (c_node_p,)
lib.unlink_node.restype = None

lib.node_set_attribute.argtypes = (c_node_p, c_char_p, c_char_p)
lib.node_set_attribute.restype = c_int

lib.node_get_attribute.argtypes = (c_node_p, c_char_p)
lib.node_get_attribute.restype = c_char_p

lib.node_get_attributes.argtypes = (c_node_p,)
lib.node_get_attributes.restype = POINTER(c_char_p)

# TVG functions

lib.alloc_tvg.argtypes = (c_uint,)
lib.alloc_tvg.restype = c_tvg_p

lib.free_tvg.argtypes = (c_tvg_p,)
lib.free_tvg.restype = None

lib.tvg_set_verbosity.argtypes = (c_tvg_p, c_int)
lib.tvg_set_verbosity.restype = None

lib.tvg_memory_usage.argtypes = (c_tvg_p,)
lib.tvg_memory_usage.restype = c_uint64

lib.tvg_link_graph.argtypes = (c_tvg_p, c_graph_p, c_uint64)
lib.tvg_link_graph.restype = c_int

lib.tvg_set_primary_key.argtypes = (c_tvg_p, c_char_p)
lib.tvg_set_primary_key.restype = c_int

lib.tvg_link_node.argtypes = (c_tvg_p, c_node_p, POINTER(c_node_p), c_uint64)
lib.tvg_link_node.restype = c_int

lib.tvg_get_node_by_index.argtypes = (c_tvg_p, c_uint64)
lib.tvg_get_node_by_index.restype = c_node_p

lib.tvg_get_node_by_primary_key.argtypes = (c_tvg_p, c_node_p)
lib.tvg_get_node_by_primary_key.restype = c_node_p

lib.tvg_load_graphs_from_file.argtypes = (c_tvg_p, c_char_p)
lib.tvg_load_graphs_from_file.restype = c_int

lib.tvg_load_nodes_from_file.argtypes = (c_tvg_p, c_char_p, c_char_p)
lib.tvg_load_nodes_from_file.restype = c_int

lib.tvg_enable_mongodb_sync.argtypes = (c_tvg_p, c_mongodb_p, c_uint64, c_uint64)
lib.tvg_enable_mongodb_sync.restype = c_int

lib.tvg_disable_mongodb_sync.argtypes = (c_tvg_p,)
lib.tvg_disable_mongodb_sync.restype = None

lib.tvg_enable_query_cache.argtypes = (c_tvg_p, c_uint64)
lib.tvg_enable_query_cache.restype = c_int

lib.tvg_disable_query_cache.argtypes = (c_tvg_p,)
lib.tvg_disable_query_cache.restype = None

lib.tvg_invalidate_queries.argtypes = (c_tvg_p, c_uint64, c_uint64)
lib.tvg_invalidate_queries.restype = None

lib.tvg_lookup_graph_ge.argtypes = (c_tvg_p, c_uint64_ts)
lib.tvg_lookup_graph_ge.restype = c_graph_p

lib.tvg_lookup_graph_le.argtypes = (c_tvg_p, c_uint64_ts)
lib.tvg_lookup_graph_le.restype = c_graph_p

lib.tvg_lookup_graph_near.argtypes = (c_tvg_p, c_uint64_ts)
lib.tvg_lookup_graph_near.restype = c_graph_p

lib.tvg_compress.argtypes = (c_tvg_p, c_uint64_ts, c_uint64_ts, c_snapshot_callback_p, c_void_p)
lib.tvg_compress.restype = c_int

# Query functions

lib.tvg_sum_edges.argtypes = (c_tvg_p, c_uint64_ts, c_uint64_ts, c_float)
lib.tvg_sum_edges.restype = c_graph_p

lib.tvg_sum_nodes.argtypes = (c_tvg_p, c_uint64_ts, c_uint64_ts)
lib.tvg_sum_nodes.restype = c_vector_p

lib.tvg_sum_edges_exp.argtypes = (c_tvg_p, c_uint64_ts, c_uint64_ts, c_float, c_float, c_float)
lib.tvg_sum_edges_exp.restype = c_graph_p

lib.tvg_count_edges.argtypes = (c_tvg_p, c_uint64_ts, c_uint64_ts)
lib.tvg_count_edges.restype = c_graph_p

lib.tvg_count_nodes.argtypes = (c_tvg_p, c_uint64_ts, c_uint64_ts)
lib.tvg_count_nodes.restype = c_vector_p

lib.tvg_count_graphs.argtypes = (c_tvg_p, c_uint64_ts, c_uint64_ts)
lib.tvg_count_graphs.restype = c_uint64

lib.tvg_topics.argtypes = (c_tvg_p, c_uint64_ts, c_uint64_ts, or_null(c_snapshot_callback_p), c_void_p)
lib.tvg_topics.restype = c_graph_p

# Metric functions

lib.metric_graph_avg.argtypes = (POINTER(c_graph_p), c_uint64)
lib.metric_graph_avg.restype = c_graph_p

lib.metric_vector_avg.argtypes = (POINTER(c_vector_p), c_uint64)
lib.metric_vector_avg.restype = c_vector_p

lib.metric_graph_std.argtypes = (POINTER(c_graph_p), c_uint64)
lib.metric_graph_std.restype = c_graph_p

lib.metric_vector_std.argtypes = (POINTER(c_vector_p), c_uint64)
lib.metric_vector_std.restype = c_vector_p

lib.metric_graph_pareto.argtypes = (c_graph_p, c_graph_p, c_int, c_int, c_float)
lib.metric_graph_pareto.restype = c_graph_p

lib.metric_vector_pareto.argtypes = (c_vector_p, c_vector_p, c_int, c_int, c_float)
lib.metric_vector_pareto.restype = c_vector_p

# MongoDB functions

lib.alloc_mongodb.argtypes = (c_mongodb_config_p,)
lib.alloc_mongodb.restype = c_mongodb_p

lib.free_mongodb.argtypes = (c_mongodb_p,)
lib.free_mongodb.restype = None

lib.mongodb_load_graph.argtypes = (c_tvg_p, c_mongodb_p, c_objectid_p, c_uint)
lib.mongodb_load_graph.restype = c_graph_p

lib.tvg_load_graphs_from_mongodb.argtypes = (c_tvg_p, c_mongodb_p)
lib.tvg_load_graphs_from_mongodb.restype = c_int

# libc functions

libc.free.argtypes = (c_void_p,)
libc.free.restype = None

# The 'cacheable' decorator can be used on Vector and Graph objects to cache the result
# of a function call as long as the underlying vector/graph has not changed. This is
# ensured by storing and comparing the revision number embedded in the object header.
def cacheable(func):
    cache = weakref.WeakKeyDictionary()
    @functools.wraps(func)
    def wrapper(self, drop_cache=False):
        try:
            old_revision, result = cache[self]
        except KeyError:
            old_revision, result = (None, None)
        new_revision = self._obj.contents.revision
        if old_revision != new_revision or drop_cache:
            result = func(self) # FIXME: Support *args, **kwargs.
            cache[self] = (new_revision, result)
        return result
    return wrapper

class memoized(object):
    def __init__(self, func, typed=True):
        self._func  = func
        self._typed = typed
        self._cache = {}

    def __call__(self, *args, **kwargs):
        key = functools._make_key(args, kwargs, self._typed)
        try:
            return self._cache[key]
        except KeyError:
            value = self._func(*args, **kwargs)
            self._cache[key] = value
            return value

# The 'libtvgobject' decorator should be used for classes corresponding to objects in
# the libtvg library. It ensures that there is at most one Python object corresponding
# to each libtvg object.
def libtvgobject(klass):
    cache = weakref.WeakValueDictionary()
    @functools.wraps(klass, assigned=('__name__', '__module__'), updated=())
    class wrapper(klass):
        __doc__ = klass.__doc__
        def __new__(cls, *args, obj=None, **kwargs):
            if obj:
                try:
                    return cache[addressof(obj.contents)]._get_obj()
                except KeyError:
                    pass
            result = klass(*args, obj=obj, **kwargs)
            result.__class__ = cls
            cache[addressof(result._obj.contents)] = result
            return result
        def __init__(self, *args, **kwargs):
            pass
    return wrapper

def _convert_values(values):
    if isinstance(values, dict):
        return values

    result = collections.defaultdict(list)
    for step, v in enumerate(values):
        if isinstance(v, Vector):
            indices, weights = v.entries()
            for i, w in zip(indices, weights):
                result[i] += [0.0] * (step - len(result[i]))
                result[i].append(w)

        elif isinstance(v, Graph):
            indices, weights = v.edges()
            for i, w in zip(indices, weights):
                i = tuple(i)
                result[i] += [0.0] * (step - len(result[i]))
                result[i].append(w)

        else:
            for i, w in v.items():
                result[i] += [0.0] * (step - len(result[i]))
                result[i].append(w)

    for i in result.keys():
        result[i] += [0.0] * (len(values) - len(result[i]))

    return result

def metric_entropy(values, num_bins=50):
    """
    Rate the importance / interestingness of individual nodes/edges by their entropy.

    # Arguments
    values: Values for each node or edge.
    num_bins: Number of bins used to create the entropy model.

    # Returns
    Dictionary containing the metric for each node or edge.
    """

    values = _convert_values(values)
    if len(values) == 0:
        return {}

    data = []
    for i in values.keys():
        data += values[i]

    prob, bin_edges = np.histogram(data, bins=num_bins)
    prob = np.array(prob, dtype=float) / np.sum(prob)
    entropy = (- np.ma.log(prob) * prob).filled(0)

    @np.vectorize
    def to_entropy(x):
        index = np.searchsorted(bin_edges, x)
        if index >= 1: index -= 1
        return entropy[index]

    result = {}
    for i in values.keys():
        result[i] = np.sum(to_entropy(values[i]))

    return result

def metric_entropy_local(values, num_bins=50):
    """
    Like metric_entropy(), but train a separate model for each time step.

    # Arguments
    values: Values for each node or edge.
    num_bins: Number of bins used to create the entropy model.

    # Returns
    Dictionary containing the metric for each node or edge.
    """

    values = _convert_values(values)
    if len(values) == 0:
        return {}

    sample_steps = len(next(iter(values.values())))

    result = collections.defaultdict(float)
    for j in range(sample_steps):

        data = []
        for i in values.keys():
            data.append(values[i][j])

        prob, bin_edges = np.histogram(data, bins=num_bins)
        prob = np.array(prob, dtype=float) / np.sum(prob)
        entropy = (- np.ma.log(prob) * prob).filled(0)

        def to_entropy(x):
            index = np.searchsorted(bin_edges, x)
            if index >= 1: index -= 1
            return entropy[index]

        for i in values.keys():
            result[i] += to_entropy(values[i][j])

    return result

def metric_entropy_2d(values, num_bins=50):
    """
    Like metric_entropy(), but train a 2-dimensional model for entropy estimations.

    # Arguments
    values: Values for each node or edge.
    num_bins: Number of bins used to create the entropy model.

    # Returns
    Dictionary containing the metric for each node or edge.
    """

    values = _convert_values(values)
    if len(values) == 0:
        return {}

    data_x = []
    data_y = []
    for i in values.keys():
        data_x += values[i][:-1]
        data_y += values[i][1:]

    prob, bin_edges_x, bin_edges_y = np.histogram2d(data_x, data_y, bins=num_bins)

    prob = np.array(prob, dtype=float) / np.sum(prob)
    entropy = (- np.ma.log(prob) * prob).filled(0)

    @np.vectorize
    def to_entropy(x, y):
        index_x = np.searchsorted(bin_edges_x, x)
        index_y = np.searchsorted(bin_edges_y, y)
        if index_x >= 1: index_x -= 1
        if index_y >= 1: index_y -= 1
        return entropy[index_x, index_y]

    result = {}
    for i in values.keys():
        result[i] = np.sum(to_entropy(values[i][:-1], values[i][1:]))

    return result

def metric_trend(values):
    """
    Rate the importance / interestingness of individual nodes/edges by their trend.

    # Arguments
    values: Values for each node or edge.

    # Returns
    Dictionary containing the metric for each node or edge.
    """

    values = _convert_values(values)
    if len(values) == 0:
        return {}

    sample_steps = len(next(iter(values.values())))

    A = np.zeros((sample_steps, 2))
    A[:, 0] = 1.0
    A[:, 1] = range(A.shape[0])

    kwargs = {}
    if np.lib.NumpyVersion(np.__version__) >= '1.14.0':
        kwargs['rcond'] = None

    result = {}
    for i in values.keys():
        result[i] = np.linalg.lstsq(A, values[i], **kwargs)[0][1]

    return result
